1.3.27.dev0
 * #225: Database dump hooks for PostgreSQL, so you can easily dump your databases before backups
   run.

1.3.26
 * #224: Fix "borgmatic list --successful" with a slightly better heuristic for listing successful
   (non-checkpoint) archives.

1.3.25
 * #223: Dead man's switch to detect when backups start failing silently, implemented via
   healthchecks.io hook integration. See the documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/monitor-your-backups/#healthchecks-hook
 * Documentation on monitoring and alerting options for borgmatic backups:
   https://torsion.org/borgmatic/docs/how-to/monitor-your-backups/
 * Automatically rewrite links when developing on documentation locally.

1.3.24
 * #86: Add "borgmatic list --successful" flag to only list successful (non-checkpoint) archives.
 * Add a suggestion form to all documentation pages, so users can submit ideas for improving the
   documentation.
 * Update documentation link to community Arch Linux borgmatic package.

1.3.23
 * #174: More detailed error alerting via runtime context available in "on_error" hook.

1.3.22
 * #144: When backups to one of several repositories fails, keep backing up to the other
   repositories and report errors afterwards.

1.3.21
 * #192: User-defined hooks for global setup or cleanup that run before/after all actions. See the
   documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/add-preparation-and-cleanup-steps-to-backups/

1.3.20
 * #205: More robust sample systemd service: boot delay, network dependency, lowered CPU/IO
   priority, etc.
 * #221: Fix "borgmatic create --progress" output so that it updates on the console in real-time.

1.3.19
 * #219: Fix visibility of "borgmatic prune --stats" output.

1.3.18
 * #220: Fix regression of argument parsing for default actions.

1.3.17
 * #217: Fix error with "borgmatic check --only" command-line flag with "extract" consistency check.

1.3.16