@@ -1,6 +1,7 @@
 1.3.27.dev0
  * #225: Database dump hooks for PostgreSQL, so you can easily dump your databases before backups
    run.
+ * #230: Rename "borgmatic list --pattern-from" flag to "--patterns-from" to match Borg.
 
 1.3.26
  * #224: Fix "borgmatic list --successful" with a slightly better heuristic for listing successful
